--- a/src/index.css
+++ b/src/index.css
@@ -16,12 +16,21 @@
   background-color: #FDFDF1;
 }
 
-#root {
+body {
+  /* margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px; */
+  min-height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+}
+
+.container {
   max-width: 1280px;
   margin: 0 auto;
-  text-align: center;
-  min-height: 100vh;
 }
+
 
 /* a {
   font-weight: 500;
@@ -30,14 +39,6 @@
 }
 a:hover {
   color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
