--- a/src/index.css
+++ b/src/index.css
@@ -30,8 +30,18 @@ body {
   padding: 30px 120px;
   max-width: 1400px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  align-items: center;
 }
 
+button {
+  font-size: 16px;
+  font-weight: 600;
+  font-family: "Alexandria", sans-serif;
+  cursor: pointer;
+}
 
 /* a {
   font-weight: 500;
@@ -45,23 +55,4 @@ a:hover {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 } */
