--- a/src/index.css
+++ b/src/index.css
@@ -44,10 +44,19 @@ button {
   cursor: pointer;
 }
 
+button:disabled {
+  cursor: default;
+}
+
 h1 {
   font-size: 40px;
   font-weight: 600;
   text-transform: uppercase;
+}
+
+h3 {
+  font-size: 24px;
+  font-weight: 500;
 }
 
 /* a {
